--- a/blindAssist/vercel.json
+++ b/blindAssist/vercel.json
@@ -17,7 +17,7 @@
       }
     ],
     "env": {
-      "DJANGO_SETTINGS_MODULE": "your_project_name.settings",
+      "DJANGO_SETTINGS_MODULE": "blindAssist.settings",
       "PYTHONUNBUFFERED": "1"
     }
   }
